--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,8 +1,3 @@
-$break-small: 320px;
-$break-large: 1200px;
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,700');
 body {
   height: 200vh;
 }
@@ -13,9 +8,9 @@ body {
 }
 
 .name-container {
-  width: 100vw;
-  height: 80vh;
-  background: linear-gradient(45deg, #6bb9f0 30%,  #3498db 60%, #2980b9 90%);
+  width: 100%;
+  height: 85vh;
+  background: linear-gradient(90deg, #6bb9f0 40%,  #3498db 60%, #2980b9 90%);
 }
 
 .name-wrap, .name, .name-wrap {
