--- a/assets/sass/_nav.scss
+++ b/assets/sass/_nav.scss
@@ -1,5 +1,4 @@
-$break-small: 320px;
-$break-large: 1200px;
+
 
 nav {
   z-index: 999;
@@ -13,17 +12,19 @@ nav {
 #menu {
   padding: 0;
   margin: 0;
+  width: 100vw;
   i {
     padding: 0 0.8em;
   }
   a {
-    color: #FFF;
+    color: #fff;
     text-decoration: none;
     padding: 1.5em;
     display: inline-block;
     vertical-align: middle;
     text-transform: uppercase;
     font-size: 1em;
+    font-weight:400;
     letter-spacing: 3px;
     height: 100%;
   }
@@ -31,7 +32,7 @@ nav {
 
 #burger {
   display: block;
-  color: #FFF;
+  color: #fff;
   margin: 0;
   padding: 0.8em;
   font-size: 1.5em;
