--- a/assets/sass/_contacts.scss
+++ b/assets/sass/_contacts.scss
@@ -1,6 +1,6 @@
 .contact-container {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background-color: #fff;
   color: #000;
   padding-top: 2em;
@@ -14,10 +14,26 @@
 
 .contact-title {
   text-align: center;
+  padding-bottom: 0.5em;
   font-size: 1.3em;
   text-transform: uppercase;
   letter-spacing: 3px;
   font-weight: bold;
+}
+
+.contact-container:hover {
+  .contact-title-slider {
+    width: 10%;
+  }
+}
+
+.contact-title-slider {
+    background-color: #000;
+    width: 0;
+    height: 2px;
+    display: block;
+    transition: width 0.5s ease-in-out;
+    margin: 0 auto;
 }
 
 .contact-email-head {
@@ -58,7 +74,7 @@
 }
 
  .contact-footer-desc {
-    margin-top: 6em;
+    margin-top: 12em;
     font-size: 0.8em;
   }
 
