--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -1,3 +1,4 @@
+/* Font Imports */
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,700');
