--- a/assets/sass/_nav.scss
+++ b/assets/sass/_nav.scss
@@ -5,7 +5,7 @@ nav {
   width: 100%;
   position: fixed;
   background: #000;
-  min-height: 4em;
+  min-height: 4.7em;
   opacity: 0.8;
 }
 
@@ -14,7 +14,7 @@ nav {
   margin: 0;
   width: 100vw;
   i {
-    padding: 0 0.8em;
+    padding: 0 0.8em 0 0;
   }
   a {
     color: #fff;
@@ -27,6 +27,11 @@ nav {
     font-weight:400;
     letter-spacing: 3px;
     height: 100%;
+    transition: font-size 0.2s ease-in-out;
+  }
+
+  a:hover {
+    border-bottom: 3px solid #fff;
   }
 }
 
