--- a/assets/sass/_contacts.scss
+++ b/assets/sass/_contacts.scss
@@ -53,19 +53,20 @@
 
 .contact-links {
   text-align: center;
-  font-size: 1.5em;
-  margin-top: 1em;
+  font-size: 2.5em;
+  margin-top: 4em;
   color: #000;
   a {
     color: #000;
     border-radius: 50%;
     border: 1px solid black;
-    padding: 0.25em 0.5em;
+    padding: 0.25em 0.55em;
+    margin: 0.25em;
   }
   #contact-linkedin:hover {
     background-color: $b-blue;
     color: #fff;
-    border: none;
+    border: 1px solid transparent;
   }
   #contact-github:hover {
     background-color: #000;
