--- a/assets/sass/_nav.scss
+++ b/assets/sass/_nav.scss
@@ -5,7 +5,7 @@ nav {
   width: 100%;
   position: fixed;
   background: #000;
-  min-height: 4.7em;
+  min-height: 4.8em;
   opacity: 0.8;
 }
 
@@ -28,6 +28,7 @@ nav {
     letter-spacing: 3px;
     height: 100%;
     transition: font-size 0.2s ease-in-out;
+    border-bottom: 3px solid transparent;
   }
 
   a:hover {
@@ -46,8 +47,7 @@ nav {
 
 .bar {
   ul {
-    display: flex;
-    flex-direction: column;
+    @include flex (column);
     opacity: 0;
     position: absolute;
     top: 3em;
@@ -67,8 +67,7 @@ nav {
     .bar {
       ul {
         opacity: 1;
-        display: flex;
-        flex-direction: row;
+        @include flex (row);
         justify-content: center;
         position: static;
         height: 100%;
