--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ body {
 .project-container {
   background-color: #323a45;
   width: 100%;
-  height: 170vh;
+  height: 220vh;
   color: #fff; }
 
 .project-title {
@@ -260,11 +260,18 @@ body {
 
 .project-img {
   width: 90vw;
-  margin-top: 1em; }
+  margin: 1em 0.5em 0 0.5em; }
+
+.project-desc {
+  margin: 0 auto;
+  width: 90vw; }
 
 @media screen and (min-width: 1200px) {
   .project-img {
-    width: 30vw; } }
+    width: 45vw; }
+  .project-desc {
+    margin: 0 auto;
+    width: 70vw; } }
 
 .contact-container {
   width: 100%;
