--- a/assets/sass/_projects.scss
+++ b/assets/sass/_projects.scss
@@ -1,7 +1,7 @@
 .project-container {
   background-color: $matt-grey;
   width: 100%;
-  height: 170vh;
+  height: 220vh;
   color: #fff;
 }
 
@@ -47,18 +47,24 @@
 
 .project-img {
   width: 90vw;
-  margin-top:1em;
+  margin:1em 0.5em 0 0.5em;
 
 }
 
 .project-desc {
-
+  margin: 0 auto;
+  width: 90vw;
 }
 
 @media screen and (min-width: $break-large) {
     .project-img {
-      width: 30vw;
+      width: 45vw;
     }
+    .project-desc {
+      margin: 0 auto;
+      width: 70vw;
+    }
+
 
 
 }
